--- a/Dominio/Dominio.csproj
+++ b/Dominio/Dominio.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Peluquero.cs" />
     <Compile Include="Producto.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Tipo.cs" />
     <Compile Include="Tratamiento.cs" />
     <Compile Include="Turno.cs" />
     <Compile Include="Usuario.cs" />
