--- a/Negocio/Negocio.csproj
+++ b/Negocio/Negocio.csproj
@@ -45,6 +45,7 @@
     <Compile Include="ProductoNegocio.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TipoNegocio.cs" />
+    <Compile Include="TratamientoNegocio.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\AccesoDatos\Datos.csproj">
