--- a/TPC-Equipo-A/TPC-Equipo-A.csproj
+++ b/TPC-Equipo-A/TPC-Equipo-A.csproj
@@ -100,6 +100,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Admin\FormularioClientes.aspx" />
+    <Content Include="Admin\FormularioTratamientos.aspx" />
     <Content Include="Admin\ListaProductos.aspx" />
     <Content Include="Admin\ListaTratamientos.aspx" />
     <Content Include="Content\bootstrap-grid.css" />
@@ -194,6 +195,13 @@
     </Compile>
     <Compile Include="Admin\FormularioClientes.aspx.designer.cs">
       <DependentUpon>FormularioClientes.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Admin\FormularioTratamientos.aspx.cs">
+      <DependentUpon>FormularioTratamientos.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Admin\FormularioTratamientos.aspx.designer.cs">
+      <DependentUpon>FormularioTratamientos.aspx</DependentUpon>
     </Compile>
     <Compile Include="Admin\ListaProductos.aspx.cs">
       <DependentUpon>ListaProductos.aspx</DependentUpon>
