--- a/Negocio/Negocio.csproj
+++ b/Negocio/Negocio.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TipoNegocio.cs" />
     <Compile Include="TratamientoNegocio.cs" />
+    <Compile Include="TurnoNegocio.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\AccesoDatos\Datos.csproj">
